<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:orientation="vertical"
    tools:context="com.herce.examenfinal.AddEmpresaActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.02">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.02"
            android:orientation="vertical">

            <TextView
                android:id="@+id/signupTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.02"
                android:fontFamily="sans-serif"
                android:text="@string/addEmpresaText"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="0dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.02"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="0dp" />

            <EditText
                android:id="@+id/nombreEmpresaField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="0.02"
                android:ems="10"
                android:hint="@string/nameText"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/sloganField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="0.02"
                android:ems="10"
                android:hint="@string/sloganText"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/oficinaField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="0.02"
                android:ems="10"
                android:hint="@string/oficinaText"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/telefonoField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="0.02"
                android:ems="10"
                android:hint="@string/telefonoText"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/faxField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="0.02"
                android:ems="10"
                android:hint="@string/faxText"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/calleField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="0.02"
                android:ems="10"
                android:hint="@string/calleText"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/ciudadField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="0.02"
                android:ems="10"
                android:hint="@string/ciudadText"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/estadoField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="0.02"
                android:ems="10"
                android:hint="@string/estadoText"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/codigopostalField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="0.02"
                android:ems="10"
                android:hint="@string/codigopostalText"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/crearButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="0.02"
                android:text="@string/crearText" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
